--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,10 +4,14 @@ html, body {
 
 body {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 canvas {
-    width: 640px;
+    max-width: 640px;
     height: 480px;
-    border: 1px solid gray;
+    border-radius: 5px;
 }
